test_regress/t/t_param_circ_bad.out
%Error: t/t_param_circ_bad.v:11:43: Variable's initial value is circular: 'X'
                                  : ... In instance t.sub
   11 | module sub #(parameter WIDTH=X, parameter X=WIDTH)
      |                                           ^
%Error: Exiting due to
